--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -5,6 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-			<p id='info'> TODO </p>
+			<p id='info'> TODO - Will be used in the next release ;) </p>
 	</body>
 </html>
